# ignorio

./: .coveragerc  .gitignore  .travis.yml  README.md  pyproject.toml
ignorio/: __init__.py  cli.py  ignorio.py
tests/: test_ignorio.py
