[tool.poetry]
name = "ignorio"
version = "0.2.0"
description = ""
authors = ["Franccesco Orozco <franccesco.orozco@codingdose.info>"]

[tool.poetry.dependencies]
python = "^3.4"
requests = "^2.19"
click = "^6.7"
colorama = "^0.3.9"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pudb = "^2018.1"
coverage = "^4.5"
coveralls = "^1.3"

[tool.poetry.scripts]
ig = "ignorio.cli:main"
